# wwwpy

./: .gitignore  LICENSE  README.md  find_flaky_test_remote.sh  pip-install-all.py  pypi_helper.py  pypi_helper_test.py  pypi_inc_minor.py  pypi_upload.py  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml
.run/: Python tests (headed) .run.xml  Python tests (headless).run.xml
dev-notes/: rename-rpc.patch
dev-notes/teach-llm/remote/: __init__.py  component1.py
docs/: cli_usage.md  introduction.md  rpc.md
incubator/accordion-custom-elements/: accordion-custom-elements.html
incubator/draggable-window-system/: draggable-window.js  index.html
incubator/drop-indicator/: index.html
incubator/getClientRects-vs/: getClientRects-vs.html
incubator/html-editor-vanilla-js/: html-editor-claude.html  html-editor-vanilla-js.html  week-plan-22-claude.html
incubator/html-tree/: html-tree-marker-summary-hotzone-claude.html  html-tree-marker-summary-hotzone.html  html-tree.html  tree-with-row-background-full-width.html  tree-with-row-background.html
incubator/mutable_state_flow/: mutable_state_flow.py  some_main.py  some_main_sync.py
incubator/names-slots/: named-slots-index.html
incubator/popup-notifications/: popup-notification-custom-element.html  popup-notification-library.html
incubator/pycharm-plugin/: plugin.groovy
incubator/pytest-xvirt-fix-stacktrace/: failed-remote-test-pytest-output.txt  pytest-xvirt-EvtRuntestLogreport.json
licenses/: README.md
preprocessing/shoelace/: convert.py
pyodide-stubs/: pyproject.toml
pyodide-stubs/src/pyodide-stubs/: ffi.pyi
src/wwwpy/: __init__.py  _build_meta.py  base_conf.py  bootstrap.py  http.py  resources.py  rpc.py  webserver.py  websocket.py
src/wwwpy/asgi/: echo_handler.py  favicon.txt  (+7 more)
src/wwwpy_plugins/: README.md
tests/: __init__.py  conftest.py  timeouts.py
tests/common/: __init__.py  _raise_on_any_test.py  _throw_on_any_test.py  collectionlib_test.py  eventbus_test.py  exitlib_test.py  extension_point_nf_test.py  extension_point_test.py  injector_test.py  injectorlib_test.py  loglib_test.py  package_manager_test.py  property_monitor_test.py  reloader_test.py  settingslib_test.py  version_test.py
tests/layer/: test_dev_mode.py  test_hot_reload.py  test_layer_1.py  test_layer_2.py  test_layer_3.py  test_layer_4.py  test_layer_5.py
tests/remote/: component_future_test.py  component_test.py  element_lib_test.py  eventlib_test.py  jslib_test.py  remote_fixtures.py  rpc4tests_helper.py  rpc4tests_test.py  test_in_pyodide.py  test_rpc.py
tests/server/: cmd_line_args_test.py  convention_fixture.py  dev_mode_test.py  flaky_test_debunk.sh  page_fixture.py  rpc4tests.py
(+254 files in other folders)
