# https://packaging.python.org/en/latest/tutorials/packaging-projects/
[project]
name = "wwwpy"
version = "0.1.85"

# todo
# dynamic = ["version"]
# [tool.setuptools.dynamic]
# version = {attr = "wwwpy.__version__"}


description = "Build Powerful Web Applications: Simple, Scalable, and Fully Customizable"
authors = [{ name = "Simone Giacomelli", email = "simone.giacomelli@gmail.com" }]
dependencies = ["tornado==6.4.2", "watchdog==6.0.0", "webtypy"]
requires-python = ">=3.10"
keywords = ["wwwpy", "wasm", "pyodide", "web", "development", "dom", "html", "javascript"]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Web Environment"
]


[project.urls]
Homepage = "https://github.com/wwwpy-labs/wwwpy"
Issues = "https://github.com/wwwpy-labs/wwwpy/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wwwpy" = ["**/*.json", "**/*.txt"]


[project.optional-dependencies]
# libcst==1.4.0 is the version available in pyodide 0.27.2
test = ["tox", "pytest", "playwright", "pytest-playwright", "pytest-xvirt", "libcst==1.4.0", "rope==1.13.0"]
dev = ["webtypy", "playwright", "setuptools", "pytest-asyncio"] # setuptools is needed from PyCharm
pypi = ["twine", "build"]
# pip install -e ".[all]" or pip install -e ".[test,dev]"
all = ["wwwpy[test,dev,pypi]"]


[project.entry-points.pytest11]
pytest_wwwpy = "wwwpy.server.pytestlib.pytest_plugin"


# the following should be already the default see: https://setuptools.pypa.io/en/latest/userguide/datafiles.html
# include_package_data = True

[project.scripts]
wwwpy = "wwwpy.server.__main__:main"